# mid

./: .gitignore  CHANGELOG.md  CHANGELOG.ru.md  CHANGELOG_RU.md  Cargo.toml  IOS_INSTRUCTIONS.md  IOS_INSTRUCTIONS.ru.md  README.md  README.ru.md  README_RU.md  build_ios.sh  test_rosetta.sh
.github/workflows/: action.yml  linux.yml  macos-test-rosetta.yml  macos-test.yml  macos.yml  windows.yml
example/: main.rs
ios_example/mid-example/: ContentView.swift  MidExampleApp.swift  MidManager.swift
ios_example/mid-example.xcodeproj/: project.pbxproj
ios_example/mid-example.xcodeproj/project.xcworkspace/xcuserdata/doroved.xcuserdatad/: UserInterfaceState.xcuserstate
ios_example/mid-example.xcodeproj/xcuserdata/doroved.xcuserdatad/xcschemes/: xcschememanagement.plist
ios_example/mid-example/Mid.xcframework/: Info.plist
ios_example/mid-example/Mid.xcframework/ios-arm64/Headers/: mid.h  module.modulemap
src/: android.rs  error.rs  errors.rs  ios.rs  lib.rs  linux.rs  macos.rs  utils.rs  windows.rs
